# unum

./: .gitignore  README.md  compile.py  setup.cfg  setup.sh  unum_wrapper.py
cli/: __init__.py  __main__.py  requirements.txt  unum-cli.py
data_flow/: README.md  data_flow.py  python_ast_parser.py
docs/: cli.md  configuration-language.md  data-store.md  error-handling.md  execution-guarantee.md  frontend-compiler.md  ir.md  runtime.md  template.md  tricky-cases.md
examples/: multiple_assign.py  power_consumption_data.json
examples/aggregator_data/: README.md  handle.py  handler.py  invoke.py
examples/aggregator_raw_data_no_se/: README.md  handle.py  invoke.py
examples/excamera/: README.md
examples/hello_sequence/: helloWorld.py
examples/hvac_controller/: README.md
examples/hvac_controller_raw_data_no_se/: README.md  handle.py  invoke.py
examples/image-process-sam/: README.md  samconfig.toml  template.yaml
examples/iot_no_side_effect/: workflow.py  workflow_chain.py  workflow_local_manipulation.py
examples/iot_pipeline/: README.md
examples/iot_raw_data_no_se/: README.md  S3_event_handle.py  http_raw_data_handle.py  lambda_http_controller.py
examples/parallel_pipelines/: 100kb.txt  10kb.txt  1kb.txt  2.5kb.txt  README.md  f1.py  f2.py  f3.py
examples/text_fan_in/: Makefile  README.md  cat.py  space.py  (+1 more)
execution_engine/: README.md  engine.py  iot.unum  operator.py  requests.json
experiments/: README.md
runtime/: ds.py  faas_invoke_backend.py  main.py  test_ds.py  unum.py  wrapper.py
unum-cli/: __init__.py  requirements.txt  unum-cli.py
(+406 files in other folders)
