[metadata]
name = unum
version = 0.0.1
author = David H. Liu
author_email = hao.liu@princeton.edu
description = Unum toolchain for building serverless apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LedgeDash/unum
project_urls =
    Bug Tracker = https://github.com/LedgeDash/unum/issues
    Documentations = https://github.com/LedgeDash/unum/tree/main/docs
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

install_requires =
    cfn-flip
    coloredlogs
    PyGithub

[options.packages.find]
where = .
